--- a/apps/AppPizzaCasera/src/Finalizacion/Finalizacion.css
+++ b/apps/AppPizzaCasera/src/Finalizacion/Finalizacion.css
@@ -54,6 +54,8 @@
     height: 100%;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
+    padding: 0;
+    margin: 0;
 }
 
 .finalizacion-superior {
